--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 app:srcCompat="@mipmap/ic_launcher"/>
 
-        <EditText
+        <TextView
                 android:id="@+id/editText2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -33,7 +33,7 @@
                 android:textColor="#ffffff"
                 android:textStyle="bold"
                 android:textAlignment="center"
-                android:text="Você está offline, conecte-se e tente novamente :)"
+                android:text="Você está offline, conecte-se e tente novamente."
                 android:inputType="textMultiLine" />
 
     </LinearLayout>
